--- a/index.html
+++ b/index.html
@@ -471,9 +471,9 @@
                 "How would you describe your personality to someone who's never met you?"
             ],
             scheduleA: [
-                "Kean Kimhour", "Biya", "Daly", "Sreng Kimheang", "Sreng Kimheang", 
-                "Venerable Oudom", "Biya", "Vannak Sophary", "Sroeun Sophea", "Kompheak", 
-                "Noa Neng", "Sroeun Sophea", "Mo Samnang", "Kean Kimhour", "Daly",
+               "Kean Kimhour", "Ban Sophea", "Song Sreyleak", "Rotha", "Biya", "Daly", "Sreng Kimheang", "Sreng Kimheang", 
+                "Venerable Oudom", "Biya", "Sroeun Sophea", "Kompheak", 
+                "Noa Neng", "Sroeun Sophea","Kean Kimhour", "Daly",
                 "Biya", "Sreng Kimheang", "Daly", "Sroeun Sophea", "Biya"
             ],
             scheduleB: [
