--- a/index.html
+++ b/index.html
@@ -477,10 +477,11 @@
                 "Biya", "Sreng Kimheang", "Daly", "Sroeun Sophea", "Biya"
             ],
             scheduleB: [
-                "Vatana", "Channy", "Vouch Neang", "Sarita Yin", "Thy Vibol", "Vanna", "Ponleu",
-                "Ran Piseth", "Chanrachna Oum", "Sean Lavy", "Ban Sophea", 
-                "Phat Khemcheat", "Yon Thavika", "Chinyu Chea", "Hor Kimheang", 
-                "Sivkeang Chhay", "Vouch Neang", "Ran Piseth", "Chanrachna Oum", "Sarita Yin"
+                "Vatana", "Channy", "Vouch Neang", "Sarita Yin", "Vanna", "Ponleu",
+                "Ran Piseth", "Chanrachna Oum", "Sean Lavy", "Chany Loeut"
+                "Phat Khemcheat", "Chinyu Chea", "Hor Kimheang", 
+                "Sivkeang Chhay", "Vouch Neang", "Ran Piseth", "Chanrachna Oum", "Sarita Yin", "Yob Fillin", "Pom Rom", "Saykeang Chhun", "Sarin Bunthoeun",
+                "Kunthea", "Mo Samnang", "Pin Din", "Tengheang Heng", "
             ],
             beginnerStudents: {
                 A: ["Venerable Oudom", "Mo Samnang", "Venerable Oudom", "Mo Samnang"],
