--- a/index.html
+++ b/index.html
@@ -480,7 +480,8 @@
                 "Vatana", "Channy", "Vouch Neang", "Sarita Yin", "Vanna", "Ponleu",
                 "Ran Piseth", "Chanrachna Oum", "Sean Lavy", "Chany Loeut"
                 "Phat Khemcheat", "Chinyu Chea", "Hor Kimheang", 
-                "Sivkeang Chhay", "Vouch Neang", "Ran Piseth", "Chanrachna Oum", "Sarita Yin", "Yob Fillin", "Pom Rom", "Saykeang Chhun", "Sarin Bunthoeun",
+                "Sivkeang Chhay", "Vouch Neang", "Ran Piseth", "Chanrachna Oum",
+            "Sarita Yin", "Yob Fillin", "Pom Rom", "Saykeang Chhun", "Sarin Bunthoeun",
                 "Kunthea", "Mo Samnang", "Pin Din", "Tengheang Heng", "
             ],
             beginnerStudents: {
